--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# exclude lib folder and test folder
+# exclude libs folder and test folder as well as builds
 libs
 src/test
+.gradle
+build
+local.properties
