--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ apply plugin: "kotlin"
 apply plugin: "application"
 apply plugin: "org.openjfx.javafxplugin"
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 javafx {
     version = "17"
     modules = ['javafx.controls', 'javafx.graphics']
